--- a/src/main/resources/templates/link/list.html
+++ b/src/main/resources/templates/link/list.html
@@ -25,10 +25,12 @@
                 <span class="domain">(<a th:href="${link.url}" th:text="${link.getDomainName()}" target="_blank">Web Address Goes Here</a>)</span>
             </p>
             <p class="tagline ">submitted
-                <!--<time title="Sat Mar 10 06:26:36 2018 UTC" datetime="2018-03-10T06:26:36+00:00" class="live-timestamp">2 hours ago</time> by-->
                 <time th:title="${link.getCreationDate()}" th:datetime="${link.getCreationDate()}"
                       class="live-timestamp" th:text="${link.getPrettyTime()}">1 hour(s)
                 </time>
+                by
+                <a href="/" th:text="${link.createdBy}" class="author">therealdanvega</a>
+                <span class="userattrs"></span>
             </p>
             <p>
                 <a th:href="@{'/link/' + ${link.id} + '#comments'}" class="comments"
