--- a/src/main/resources/templates/link/view.html
+++ b/src/main/resources/templates/link/view.html
@@ -34,7 +34,7 @@
                     hours ago
                 </time>
                 by
-                <a href="https://www.reddit.com/user/therealdanvega" class="author">therealdanvega</a>
+                <a href="/" th:text="${link.createdBy}" class="author">therealdanvega</a>
                 <span class="userattrs"></span>
             </p>
             <p><a th:href="${link.url}" th:text="${link.url}" target="_blank"></a></p>
